--- a/coms/mount/Cargo.toml
+++ b/coms/mount/Cargo.toml
@@ -10,13 +10,14 @@ crate-type = ["dylib"]
 name = "mount"
 
 [dependencies]
-dynamic_reload = "0.8.0"
+libevent = { path = "../../libs/libevent" }
 utils = { path = "../../libutils" }
 process1 = { path = "../../process1" }
+
+dynamic_reload = "0.8.0"
 nix = "0.24"
 log = "0.4"
 epoll = "4.3.1"
-event = { path = "../../libevent" }
 libmount = "0.1.15"
 libc = "0.2.*"
 serde = "1.0.130"
