--- a/coms/socket/Cargo.toml
+++ b/coms/socket/Cargo.toml
@@ -10,11 +10,12 @@ crate-type = ["dylib"]
 name = "socket"
 
 [dependencies]
-dynamic_reload = "0.8.0"
 utils = { path = "../../libutils" }
 cgroup = { path = "../../libcgroup" }
-event = { path = "../../libevent" }
+libevent = { path = "../../libs/libevent" }
 process1 = { path = "../../process1" }
+
+dynamic_reload = "0.8.0"
 strum = { version = "0.23", features = ["derive"] }
 nix = "0.24"
 log = "0.4"
