--- a/libs/libcgroup/Cargo.toml
+++ b/libs/libcgroup/Cargo.toml
@@ -1,17 +1,12 @@
 [package]
-name = "cgroup"
+name = "libcgroup"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-crate-type = ["lib"]
-name = "cgroup"
-
-
 [dependencies]
-utils = { path = "../libutils" }
+utils = { path = "../../libutils" }
 log = "0.4"
 nix = "0.24"
 errno = "*"
