--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,12 +14,12 @@ repos:
       - id: detect-private-key
     #  - id: check-executables-have-shebangs
     #  - id: check-shebang-scripts-are-executable
-  # - repo: "https://github.com/codespell-project/codespell"
-  #   rev: v2.2.1
-  #   hooks:
-  #     - id: codespell
-  #       args: [-I, ci/codespell_ignore_words]
-  #       verbose: true
+  - repo: "https://github.com/codespell-project/codespell"
+    rev: v2.2.1
+    hooks:
+      - id: codespell
+        args: [-I, ci/codespell_ignore_words]
+        verbose: true
   # - repo: "https://github.com/psf/black.git"
   #   rev: 22.8.0
   #   hooks:
