--- a/coms/socket/Cargo.toml
+++ b/coms/socket/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["dylib"]
 name = "socket"
 
 [dependencies]
-utils = { path = "../../libutils" }
+libutils = { path = "../../libs/libutils" }
 libcgroup = { path = "../../libs/libcgroup" }
 libevent = { path = "../../libs/libevent" }
 process1 = { path = "../../process1" }
