--- a/libs/libutils/Cargo.toml
+++ b/libs/libutils/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "utils"
+name = "libutils"
 version = "0.1.0"
 authors = ["overweight <hexiaowen@huawei.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-crate-type = ["lib"]
-name = "utils"
 
 [dependencies]
 toml = "0.5.8"
@@ -24,4 +20,4 @@ nix = "0.24"
 pathdiff = "0.2.1"
 
 [dev-dependencies]
-tests = { path = "../libs/libtests" }
+tests = { path = "../libtests" }
